--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<p>navbar works!</p>
+<nav class="bg-primary d-flex justify-content-between p-3 wrapper">
+  <div class="logo">demo</div>
+  <div class="right">B</div>
+</nav>
+<div class="space-holder"></div>
