--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,6 +1,12 @@
+// DIMENSIONS
+$navbar-height: 56px;
 // BACKGROUND
 
 // FONT
 $font-small: 0.8rem;
+$font-large: 1.2rem;
 // COLORS
 $grey: #ccc;
+
+// Z-INDEX
+$navbar-z: 10;
