--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="post">
+<a class="post" [routerLink]="['/post', post.slug]">
   <div class="row bg-white h-100 mx-0 py-2">
     <div class="col-12 px-0">
       <div class="card card-body border-0 py-2">
@@ -16,4 +16,4 @@
       </div>
     </div>
   </div>
-</div>
+</a>
