--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="bg-primary d-flex justify-content-between p-3 wrapper">
-  <div class="logo">demo</div>
+  <a class="logo" [routerLink]="['/home']">demo</a>
   <div class="right">B</div>
 </nav>
 <div class="space-holder"></div>
