--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,1 +1,12 @@
-<p>comment works!</p>
+<div class="row mb-4">
+  <div class="col-12">
+    <div
+      class="d-flex justify-content-start mb-3 text-muted header align-items-center"
+    >
+      <img [src]="comment.author.avatar_URL" class="avatar" />
+      <span class="pl-3">{{ comment.author.name }}</span>
+      <span class="pl-3">{{ comment.date }}</span>
+    </div>
+  </div>
+  <div class="col-12" [innerHTML]="comment.content"></div>
+</div>
