--- a/src/app/pages/post-details/post-details.component.html
+++ b/src/app/pages/post-details/post-details.component.html
@@ -11,7 +11,11 @@
     </div>
     <div class="content" [innerHTML]="post.content"></div>
     <div class="comments">
-      <app-comment *ngFor="let comment of post.comments"></app-comment>
+      <h3 class="mt-5 mb-4">Comments</h3>
+      <app-comment
+        *ngFor="let comment of post.comments"
+        [comment]="comment"
+      ></app-comment>
     </div>
   </div>
 </div>
