--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -2,7 +2,7 @@
   <div class="row bg-white h-100 mx-0 py-2">
     <div class="col-12 px-0">
       <div class="card card-body border-0 py-2">
-        <img [src]="post.post_thumbnail.URL" alt="" class="w-100" />
+        <div [ngStyle]="imageStyle" alt="" class="img w-100"></div>
       </div>
     </div>
     <div class="col-12 px-0">
