--- a/src/app/pages/post-details/post-details.component.html
+++ b/src/app/pages/post-details/post-details.component.html
@@ -6,7 +6,7 @@
       <div class="content" [innerHTML]="post.excerpt"></div>
       <div class="row text-muted footer">
         <div class="col">{{ post.author.name }}</div>
-        <div class="col">{{ post.date }}</div>
+        <div class="col">{{ post.date | date: "medium" }}</div>
       </div>
     </div>
     <div class="content" [innerHTML]="post.content"></div>
