--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -8,7 +8,7 @@
     <div class="col-12 px-0">
       <div class="card card-body border-0">
         <h5>{{ post.title }}</h5>
-        <div class="content" [innerHTML]="post.excerpt"></div>
+        <div class="content" [innerHTML]="post.excerpt | safeHTML"></div>
         <app-author [author]="post.author" [date]="post.date"></app-author>
       </div>
     </div>
