--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -10,3 +10,9 @@ $grey: #ccc;
 
 // Z-INDEX
 $navbar-z: 10;
+
+// BREAKPOINTS
+$screen-sm-min: 576px;
+$screen-md-min: 768px;
+$screen-l-min: 992px;
+$screen-xl-min: 1200px;
