--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-navbar></app-navbar>
 <!-- <app-side-drawer></app-side-drawer> -->
 <router-outlet></router-outlet>
+<app-spinner></app-spinner>
