--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-navbar></app-navbar>
-<!-- <app-side-drawer></app-side-drawer> -->
-<router-outlet></router-outlet>
-<app-spinner></app-spinner>
+<div [class.blur]="spinner">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+</div>
+<app-backdrop *ngIf="spinner"></app-backdrop>
