--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,3 +1,3 @@
-<div class="container-md px-0">
+<div class="post-container px-0">
   <app-post *ngFor="let post of postList" [post]="post"></app-post>
 </div>
