--- a/src/app/pages/post-details/post-details.component.html
+++ b/src/app/pages/post-details/post-details.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div [ngStyle]="imageStyle" class="mb-3 w-100 post-img"></div>
-  <div class="container-post">
+  <div class="post-container">
     <div class="hero-box mb-5">
       <h1>{{ post.title }}</h1>
       <div class="content" [innerHTML]="post.excerpt | safeHTML"></div>
