--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./assets/variables";
+@import "./assets/mixins";
 
 a {
   color: inherit;
@@ -7,4 +8,9 @@ a {
     color: inherit;
     text-decoration: none;
   }
+}
+
+.post-container {
+  @include post-width;
+  margin: 0 auto;
 }
