--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,1 +1,8 @@
-<p>Not found</p>
+<div class="wrapper d-flex flex-column align-items-center">
+  <div
+    class="circle d-flex flex-column align-items-center justify-content-center mb-3"
+  >
+    <span>404</span>
+  </div>
+  <span>Page not found</span>
+</div>
