readme and small changes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,6 @@
-<nav class="bg-primary d-flex justify-content-between p-3 wrapper">
-  <a class="logo" [routerLink]="['/home']">demo</a>
+<nav class="bg-primary  wrapper">
+  <div class="post-container p-3">
+    <a class="logo" [routerLink]="['/home']">demo</a>
+  </div>
 </nav>
 <div class="space-holder"></div>
